fix: illustrations not showing in docs

--- a/apps/dialtone-documentation/docs/.vuepress/theme/assets/less/dialtone-docs.less
+++ b/apps/dialtone-documentation/docs/.vuepress/theme/assets/less/dialtone-docs.less
@@ -531,10 +531,20 @@ a.header-anchor {
   width: var(--dt-size-650);
   height: var(--dt-size-650);
   margin-bottom: var(--dt-space-300);
+
+  svg {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .dialtone-icon-card__icon--autosize {
   margin-bottom: var(--dt-space-300);
+
+  svg {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .dialtone-icon-card__title {
